--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body id="root">
-    <div ></div>
+  <body >
+    <div id="root">
   </body>
 </html>
